--- a/formularze.html
+++ b/formularze.html
@@ -12,14 +12,14 @@
     </div>
     <div style="float:left;width:30%;height:550px;background-color:#d3d3d3;">
         <h3>HTML</h3>
-            <a href="index1.html">STRONA GŁÓWNA</a> <br/>
-            <a href="Nauczyciele.html">NAUCZYCIELE</a> <br/>
+            <a href="index.html">STRONA GŁÓWNA</a> <br/>
+            <a href="nauczyciele.html">NAUCZYCIELE</a> <br/>
             <a href="zdjecia.html">ZDJĘCIA</a> <br/>
-            <a href="Tabele.html">TABELA</a> <br/>
-            <a href="Krawczyk.html">TABELA NA OCENĘ</a> <br/>
-            <a href="Listy.html">LISTY</a> <br/>
-            <a href="ListyKrawczyk.html">LISTY NA OCENĘ</a> <br/>
-            <a href="Formularze.html">FORMULARZE</a> <br/>
+            <a href="tabele.html">TABELA</a> <br/>
+            <a href="krawczyk.html">TABELA NA OCENĘ</a> <br/>
+            <a href="listy.html">LISTY</a> <br/>
+            <a href="listykrawczyk.html">LISTY NA OCENĘ</a> <br/>
+            <a href="formularze.html">FORMULARZE</a> <br/>
 
 
     </div>
