--- a/formularze.html
+++ b/formularze.html
@@ -7,7 +7,7 @@
 <body> 
 
     <div style="background-color:grey;">
-    <h1> <center> Projektowanie stron internetowych-Barbara Micińska </center></h1>
+    <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
     
     </div>
     <div style="float:left;width:30%;height:550px;background-color:#d3d3d3;">
