--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             <a href="listy.html">LISTY</a> <br/>
             <a href="listykrawczyk.html">LISTY NA OCENĘ</a> <br/>
             <a href="formularze.html">FORMULARZE</a> <br/>
+            <a href="formularze_szymon_krawczyk">FORMULARZE NA OCENE</a> <br/>
+        <h3>CSS</h3>
+            <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
+        <h3>MULTIMEDIA</h3>
+            <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
+            <a href="muzyka"> MUSIC </a> <br/>
+        <h3>DOKUMENTY</h3>
+             <a href=""> WORD </a> <br/>
+             <a href=""> EXCEL </a> <br/>
+        <h3>LINKI</h3>
+            <a href="google.com"> <img src="google"/> </a> <br/>
+            <a href="muzyka"> MUSIC </a> <br/>
+        
 
 
     </div>
