--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href=""> WORD </a> <br/>
              <a href=""> EXCEL </a> <br/>
         <h3>LINKI</h3>
-            <a href="google.com"> <img src="google"/> </a> <br/>
+            <a href="google.com"> <img src="google.png"/> </a> <br/>
             <a href="muzyka"> MUSIC </a> <br/>
         
 
