--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
              <a href=""> WORD </a> <br/>
              <a href=""> EXCEL </a> <br/>
         <h3>LINKI</h3>
-            <a href="google.com"> <img src="google.png"/> </a> <br/>
-            <a href="muzyka"> MUSIC </a> <br/>
+            <a href="google.com"> <img height="50" wight="70" src="google.png"/> </a> <br/>
+            <a href=""> </a> <br/>
         
 
 
