--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -90,4 +90,12 @@ zadanie 1A-czcionka </body><br/>
      styl-oblique, grubość-bold, rozmiar-50px; typ czcionki-normalny 
 </em>
 
-</body></html>
+  </div>
+    <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
+
+
+
+    </div>
+
+</body>
+</html>
