--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
     
     </div>
-    <div style="float:left;width:30%;height:550px;background-color:#d3d3d3;">
+    <div style="float:left;width:30%;height:1000px;background-color:#d3d3d3;">
         <h3>HTML</h3>
            <a href="index.html">STRONA GŁÓWNA</a> <br/>
             <a href="nauczyciele.html">NAUCZYCIELE</a> <br/>
@@ -30,8 +30,8 @@
              <a href=""> WORD </a> <br/>
              <a href=""> EXCEL </a> <br/>
         <h3>LINKI</h3>
-            <a href="google.com"> <img height="50" wight="70" src="google.png"/> </a> <br/>
-            <a href=""> </a> <br/>
+            <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="google.png"/> </a> <br/>
+            <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="strona_psi.jpg"/> </a> <br/>
         
 
 
