--- a/listy.html
+++ b/listy.html
@@ -6,11 +6,11 @@
 </head>
 <body> 
 
-    <div style="background-color:grey;">
-    <h1> <center> Projektowanie stron internetowych-Barbara Micińska </center></h1>
+     <div style="background-color:grey;">
+    <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
     
     </div>
-    <div style="float:left;width:30%;height:550px;background-color:#d3d3d3;">
+    <div style="float:left;width:30%;height:1000px;background-color:#d3d3d3;">
         <h3>HTML</h3>
            <a href="index.html">STRONA GŁÓWNA</a> <br/>
             <a href="nauczyciele.html">NAUCZYCIELE</a> <br/>
@@ -20,6 +20,20 @@
             <a href="listy.html">LISTY</a> <br/>
             <a href="listykrawczyk.html">LISTY NA OCENĘ</a> <br/>
             <a href="formularze.html">FORMULARZE</a> <br/>
+            <a href="formularze_szymon_krawczyk">FORMULARZE NA OCENE</a> <br/>
+        <h3>CSS</h3>
+            <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
+        <h3>MULTIMEDIA</h3>
+            <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
+            <a href="muzyka"> MUSIC </a> <br/>
+        <h3>DOKUMENTY</h3>
+             <a href=""> WORD </a> <br/>
+             <a href=""> EXCEL </a> <br/>
+        <h3>LINKI</h3>
+            <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="google.png"/> </a> <br/>
+            <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="strona_psi.jpg"/> </a> <br/>
+        
+
 
     </div>
     <div style="float:right;width:70%;">
