--- a/obrazy_i_multimedia.html
+++ b/obrazy_i_multimedia.html
@@ -6,6 +6,39 @@
 </head>
 <body bgcolor="grey"> 
 
+	 <div style="background-color:grey;">
+    <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
+    
+    </div>
+    <div style="float:left;width:30%;height:1000px;background-color:#d3d3d3;">
+        <h3>HTML</h3>
+           <a href="index.html">STRONA GŁÓWNA</a> <br/>
+            <a href="nauczyciele.html">NAUCZYCIELE</a> <br/>
+            <a href="zdjecia.html">ZDJĘCIA</a> <br/>
+            <a href="tabele.html">TABELA</a> <br/>
+            <a href="krawczyk.html">TABELA NA OCENĘ</a> <br/>
+            <a href="listy.html">LISTY</a> <br/>
+            <a href="listykrawczyk.html">LISTY NA OCENĘ</a> <br/>
+            <a href="formularze.html">FORMULARZE</a> <br/>
+            <a href="formularze_szymon_krawczyk">FORMULARZE NA OCENE</a> <br/>
+        <h3>CSS</h3>
+            <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
+        <h3>MULTIMEDIA</h3>
+            <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
+            <a href="muzyka"> MUSIC </a> <br/>
+        <h3>DOKUMENTY</h3>
+             <a href=""> WORD </a> <br/>
+             <a href=""> EXCEL </a> <br/>
+        <h3>LINKI</h3>
+            <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="google.png"/> </a> <br/>
+            <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="strona_psi.jpg"/> </a> <br/>
+        
+
+
+    </div>
+    <div style="float:right;width:70%;">
+        <h3>Treść strony</h3>
+
 
     Czekolada pitna - ziarna kakaowca są poddawane fermentacji, suszone, a następnie oczyszczane i prażone. 
 	Następnie miażdży się ich skorupki i odsiewa je oraz usuwa zarodki. Z pokruszonych ziaren wydobywa się tłuszcz 
@@ -51,6 +84,13 @@
     <img  width="300px" src="foty/superbum.gif"/>
 <hr/>
 <video src="foty/Screen_Recording_20231112_185002_YouTube.mp4" height="250px" width="250px" controls loop></video>
+
+	    </div>
+    <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
+
+
+
+    </div>
 
 
 
