--- a/obrazy_i_multimedia.html
+++ b/obrazy_i_multimedia.html
@@ -4,7 +4,7 @@
     <title> Obrazy i Multimedia</title>
     <meta charset="UTF-8">    
 </head>
-<body bgcolor="grey"> 
+<body> 
 
 	 <div style="background-color:grey;">
     <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
