--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -2,7 +2,6 @@
 <html lang="pl-PL"><head>
 <title> Właściwości CSS </title>
 <style type="text/css">
-
   p { 
         font-family:"Courier-New";
         font-style:italic;
@@ -27,6 +26,18 @@
         font-size:50px;
         font-variant:normal;
         color:lawngreen;
+
+  }
+
+  h1 { 
+        color:green;
+        text-decoration:overline;
+        line-height: 100%;
+        text-align:center;
+        text-transform:lowercase;
+        text-indent:20px;
+        letter-spacing:2px;
+
   }
 
   body {
@@ -76,17 +87,30 @@
 zadanie 1-czcionka
 <p> Formatowanie akapitu p; krój czcionki-Courier New,
      styl-pochylenie, grubość-500, rozmiar-20px;  
-</p>
+</p> <br/>
 
 zadanie 1A-czcionka
 <blockquote> Formatowanie blockquote: krój czcionki-Fantasy,
      styl-pochylenie, grubość-bolder, rozmiar-30px; typ czcionki-kapitaliki 
-</blockquote>
+</blockquote> <br/>
 
 zadanie 1A-czcionka </body><br/>
 <em> Formatowanie em: krój czcionki-Verdana,
      styl-oblique, grubość-bold, rozmiar-50px; typ czcionki-normalny 
-</em>
+</em> <br/>
+
+  zadanie 2-TEKST  <br/>
+<h1> formatowanie tytułu h1:
+      dekoracja tekstu-nakreślenie,
+      odstępy między wierszami-100%,
+      wysrodkowanie,
+      kolor tekstu-zielony,
+      zmiana tekstu-małe litery,
+      wcięcie wiersza-20px;
+      odstępy między znakami:2px:
+
+
+</h1>
 
   </div>
     <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
