--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
             <a href="muzyka"> MUSIC </a> <br/>
         <h3>DOKUMENTY</h3>
-             <a href=""> WORD </a> <br/>
-             <a href=""> EXCEL </a> <br/>
+            <a href="doc/grupaii2.docx"> WORD</a> <br />
+            <a href="doc/zeszyt1.xlsx"> EXCEL</a>
         <h3>LINKI</h3>
             <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="google.png"/> </a> <br/>
             <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="strona_psi.jpg"/> </a> <br/>
