--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
-            <a href="muzyka.html"> MUSIC </a> <br/>
+            <a href="calosc.wav"> MUSIC </a> <br/>
         <h3>DOKUMENTY</h3>
             <a href="doc/grupaii2.docx"> WORD</a> <br />
             <a href="doc/zeszyt1.xlsx"> EXCEL</a>
