--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -29,7 +29,7 @@
 
   }
 
-  h1 { 
+  go { 
         color:green;
         text-decoration:overline;
         line-height: 100%;
@@ -100,7 +100,7 @@ zadanie 1A-czcionka </body><br/>
 </em> <br/>
 
   zadanie 2-TEKST  <br/>
-<h1> formatowanie tytułu h1:
+<go> formatowanie tytułu h1:
       dekoracja tekstu-nakreślenie,
       odstępy między wierszami-100%,
       wysrodkowanie,
@@ -110,7 +110,7 @@ zadanie 1A-czcionka </body><br/>
       odstępy między znakami:2px:
 
 
-</h1>
+</go>
 
   </div>
     <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
