--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -50,7 +50,7 @@
   }
 
 </style> </head>
-<body background="foty/isaac_tlo.jpg">
+<body background="isaac_swiateczny.png">
 
   <div style="background-color:grey;">
     <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
