--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -41,13 +41,17 @@
   }
 
   body {
-    background-size: 100% 100%;
-    background-attachment:fixed ;
-    background-repeat: no-repeat;
+    background-size: 400px 400px ;
+    background-attachment:scroll ;
+    background-repeat:no-repeat;
+    background-position:right ;
 
 
 
   }
+
+ 
+    
 
 </style> </head>
 <body background="isaac_swiateczny.png">
