--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -29,7 +29,7 @@
 
   }
 
-  go { 
+  h2 { 
         color:green;
         text-decoration:overline;
         line-height: 100%;
@@ -45,16 +45,31 @@
     background-attachment:scroll ;
     background-repeat:no-repeat;
     background-position:right ;
-
+    
 
 
   }
 
- 
-    
+  div#obramowanie1 { 
+        border-color:aqua;
+        border-width:medium;
+        width:40%;
+        border-style:dashed;
+
+
+  }
+
+  .h4 { 
+        border-color:aqua;
+        border-width:medium;
+        background-color:yellow;
+        border-style:dashed;
+
+
+  }
 
 </style> </head>
-<body background="isaac_swiateczny.png">
+<body background="foty/isaac_swiateczny.png">
 
   <div style="background-color:grey;">
     <h1> <center> Projektowanie stron internetowych-Szymon Krawczyk </center></h1>
@@ -104,7 +119,7 @@ zadanie 1A-czcionka </body><br/>
 </em> <br/>
 
   zadanie 2-TEKST  <br/>
-<go> formatowanie tytułu h1:
+<h2> formatowanie tytułu h1:
       dekoracja tekstu-nakreślenie,
       odstępy między wierszami-100%,
       wysrodkowanie,
@@ -114,7 +129,17 @@ zadanie 1A-czcionka </body><br/>
       odstępy między znakami:2px:
 
 
-</go>
+</h2>
+
+<div id="obramowanie1" > <h3> Zadanie 1: Utwórz identyfikator dla selektora div
+  identyfikator o nazwie "obramowanie1"
+  
+  Ustawienie OBRAMOWANIA dla div#obramowanie1: styl – kreskowanie, kolor obr. – aqua, grubość - średnia, szer. 40 %
+  </h3> </div>
+
+  <q class="h4" >  Zadanie 2: Utwórz klasę / klasę uniwersalną dla selektora h2.
+    Ustawienie OBRAMOWANIA dla h2: styl – kreskowanie, kolor obr. – aqua, grubość - średnia, tło: żółte
+  </q>
 
   </div>
     <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
