--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -68,6 +68,51 @@
 
   }
 
+
+
+#zadanie2 { 
+      text-decoration:overline;
+      letter-spacing: 5pt;
+      vertical-align: middle;
+      color: white;
+      background-color:fuchsia;
+      background-size: 3px;
+      border-style: dotted;
+      padding: 20px;
+      border-width: 70%;
+
+}
+
+#zadanie3 { 
+      text-decoration:overline;
+      letter-spacing: 5pt;
+      vertical-align: middle;
+      color: white;
+      background-color:fuchsia;
+      background-size: 3px;
+      border-style: dotted;
+      padding: 20px;
+      border-width: 70%;
+      background-clip: content-box;
+      border-color: darkblue;
+
+}
+
+#zadanie4 { 
+      text-decoration:underline;
+      letter-spacing: 10pt;
+      vertical-align: left;
+      color: red;
+      background-color:aquamarine;
+      background-size: 5px;
+      border-style: double;
+      padding: 30px;
+      border-width: 80%;
+      background-clip: padding-box;
+      border-color: darkorange;
+
+}
+
 </style> </head>
 <body background="foty/isaac_swiateczny.png">
 
@@ -135,11 +180,22 @@ zadanie 1A-czcionka </body><br/>
   identyfikator o nazwie "obramowanie1"
   
   Ustawienie OBRAMOWANIA dla div#obramowanie1: styl – kreskowanie, kolor obr. – aqua, grubość - średnia, szer. 40 %
-  </h3> </div>
+  </h3> </div> </html><br/>
 
   <q class="h4" >  Zadanie 2: Utwórz klasę / klasę uniwersalną dla selektora h2.
     Ustawienie OBRAMOWANIA dla h2: styl – kreskowanie, kolor obr. – aqua, grubość - średnia, tło: żółte
-  </q>
+  </q> <br/> 
+
+  <div id="zadanie2"> TEKST NAKREŚLONY, ODSTĘPY MIĘDZY ZNAKAMI W TEKŚCIE 5 PT, WYŚRODKOWANY TEST, KOLOR TEKSTU BIAŁY,
+   TŁO FUCHSIA, OBRAMOWANIE 3PX KROPOWANE BĄDŹ INSET BIAŁE, ODSTĘP 20 PX, SZEROKOŚĆ 70% </div><br/>
+
+   <div id="zadanie3"> TEKST NAKREŚLONY, ODSTĘPY MIĘDZY ZNAKAMI W TEKŚCIE 5 PT, WYŚRODKOWANY TEST, KOLOR TEKSTU BIAŁY,
+       TŁO FUCHSIA, OBRAMOWANIE 3PX KROPOWANE BĄDŹ INSET BIAŁE, ODSTĘP 20 PX, SZEROKOŚĆ 70%</div><br/>
+
+       <div id="zadanie4"> TEKST PODKREŚLONY, ODSTĘPY MIĘDZY ZNAKAMI W TEKŚCIE 10 PT, TEST WYRÓWNANY DO LEWEJ STRONY, KOLOR TEKSTU CZERWONY,
+            TŁO AQUAMARINE, OBRAMOWANIE 5PX PODWÓJNE, ODSTĘP 30 PX, SZEROKOŚĆ 80%</div><br/>
+
+
 
   </div>
     <div style="background-color:grey;clear:both;"><center>&copy;S.K.,September 2023</center>
