--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="formularze.html">FORMULARZE</a> <br/>
             <a href="formularze_szymon_krawczyk">FORMULARZE NA OCENE</a> <br/>
         <h3>CSS</h3>
+            <a href="klasa_iden.html">KLASA IDEN</a> <br/>
             <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
