--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -213,6 +213,29 @@ ul.punkty{
       font-family: tahoma;
 }
 
+ol.punkty2{
+      list-style-type:upper-alpha ;
+      list-style-position: inside;
+      color:rgb(41, 201, 36);
+      font-family: 'Times New Roman', Times, serif;
+}
+
+ol.punkty3{
+      list-style-type:upper-alpha ;
+      list-style-position: inside;
+      color:rgb(47, 19, 170);
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      list-style-image: url(/torcik.gif);
+}
+
+li.gif1{
+      list-style-image: url(/malytorcik.gif);
+}
+
+li.gif2{
+      list-style-image: url(/duzytorcik.gif);
+}
+
 </style> </head>
 <body background="foty/isaac_swiateczny.png">
 
@@ -337,6 +360,20 @@ zadanie 1A-czcionka </body><br/>
                         <li> Świetny nauczyciel </li>
                         <li> Może się przydać w uczeniu się innych języków programowania </li>
                         </ul>
+
+                        <ol class="punkty2"> TRZY ZALETY PSI:
+                              <li> NIE </li>
+                              <li> MA  </li>
+                              <li> WAD </li>
+                              </ol>
+
+                              <ol class="punkty3"> CO BĘDE ROBIŁ W FERIE:
+                                    <li class="gif1"> PIĆ</li>
+                                    <li class="gif2"> JEŚĆ  </li>
+                                    <li class="gif1"> SPAĆ </li>
+                                    <li class="gif1"> GRAĆ  </li>
+                                    <li class="gif2"> IŚĆ NA KRĘGLE Z JAKIMIŚ DEBILAMI </li>
+                                    </ol>
       
 
 
