--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -236,6 +236,16 @@ li.gif2{
       list-style-image: url(/duzytorcik.gif);
 }
 
+div#ramka {
+      height: 8%;
+      width: 45%;
+      border-right-color: blue;
+      background-color: aqua;
+      border-style: double;
+      border-radius: 20px;
+      padding: 10px 25px 15px 20px ;
+}
+
 </style> </head>
 <body background="foty/isaac_swiateczny.png">
 
@@ -359,21 +369,37 @@ zadanie 1A-czcionka </body><br/>
                         <li> Tworzenie stron w internecie które każdy może zobaczyć </li>
                         <li> Świetny nauczyciel </li>
                         <li> Może się przydać w uczeniu się innych języków programowania </li>
-                        </ul>
+                  </ul>
 
-                        <ol class="punkty2"> TRZY ZALETY PSI:
-                              <li> NIE </li>
-                              <li> MA  </li>
-                              <li> WAD </li>
-                              </ol>
+                  <ol class="punkty2"> TRZY WADY PSI:
+                        <li> NIE </li>
+                        <li> MA  </li>
+                        <li> WAD </li>
+                  </ol>
 
-                              <ol class="punkty3"> CO BĘDE ROBIŁ W FERIE:
-                                    <li class="gif1"> PIĆ</li>
-                                    <li class="gif2"> JEŚĆ  </li>
-                                    <li class="gif1"> SPAĆ </li>
-                                    <li class="gif1"> GRAĆ  </li>
-                                    <li class="gif2"> IŚĆ NA KRĘGLE Z JAKIMIŚ DEBILAMI </li>
-                                    </ol>
+                  <ol class="punkty3"> CO BĘDE ROBIŁ W FERIE:
+                        <li class="gif1"> PIĆ</li>
+                        <li class="gif2"> JEŚĆ  </li>
+                        <li class="gif1"> SPAĆ </li>
+                        <li class="gif1"> GRAĆ  </li>
+                        <li class="gif2"> IŚĆ NA KRĘGLE Z JAKIMIŚ DEBILAMI </li>
+                  </ol>
+
+                  <table border="1" width="50%" class="new">
+                        <tr>
+                        <th> 1 </th>
+                        <th> 2 </th>
+                        </tr>
+                        </table> <br/>
+
+                  <div id="ramka">
+                        Ustawienie wysokości (8%) i szerokości (45%) dla elementu div#rozmiar
+Kolor i rodzaj obramowania dobierz samodzielnie
+div#rozmiar <br/> { height: 8%; width: 45%; border: ...........; }
+
+                  </div>
+
+
       
 
 
