--- a/wlasciwosci_css.html
+++ b/wlasciwosci_css.html
@@ -246,6 +246,13 @@ div#ramka {
       padding: 10px 25px 15px 20px ;
 }
 
+.jeden {
+      
+      width: 40%;
+      border-color: blue;
+      border-collapse: collapse;
+}
+
 </style> </head>
 <body background="foty/isaac_swiateczny.png">
 
@@ -398,6 +405,26 @@ Kolor i rodzaj obramowania dobierz samodzielnie
 div#rozmiar <br/> { height: 8%; width: 45%; border: ...........; }
 
                   </div>
+
+                  <table border="1" class="jeden">
+                        <tr class="jeden">
+                              <td class="jeden">komórka 1-1</td>
+                              <td class="jeden">komórka 1-2</td>
+                              <td class="jeden">komórka 1-3</td>
+                        </tr>
+                        <tr class="jeden">
+                              <td class="jeden">komórka 2-1</td>
+                              <td class="jeden">komórka 2-2</td>
+                              <td class="jeden">komórka 2-3</td>
+                        </tr>
+                        <tr class="jeden">
+                              <td class="jeden">komórka 3-1</td>
+                              <td class="jeden">komórka 3-2</td>
+                              <td class="jeden">komórka 3-3</td>
+                        </tr>
+
+
+                  </table>
 
 
       
