--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <a href="formularze_szymon_krawczyk">FORMULARZE NA OCENE</a> <br/>
         <h3>CSS</h3>
             <a href="klasa_iden.html">KLASA IDEN</a> <br/>
-            <a href="wlasciwosci_css">WŁAŚCIWOŚCI CSS</a> <br/>
+            <a href="wlasciwosci_css.html">WŁAŚCIWOŚCI CSS</a> <br/>
+            <a href="bajka_krawczyk.html">BAJKA_KRAWCZYK</a> <br/>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
             <a href="calosc.wav"> MUSIC </a> <br/>
