--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="klasa_iden.html">KLASA IDEN</a> <br/>
             <a href="wlasciwosci_css.html">WŁAŚCIWOŚCI CSS</a> <br/>
             <a href="bajka_krawczyk.html">BAJKA_KRAWCZYK</a> <br/>
+            <a href="strona_semantyczna.html">STRONA SEMANTYCZNA</a> </b>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
             <a href="calosc.wav"> MUSIC </a> <br/>
