--- a/strona_semantyczna.html
+++ b/strona_semantyczna.html
@@ -60,7 +60,7 @@ footer{border: 1px solid green; width:100%;clear: both; padding: 20px; backgroun
                 <li><a href="#"> Strona główna</a></li>
                 <li><a href="#"> Produkty</a></li>
                 <li><a href="#"> O nas</a></li>
-                <li><a href="#"> Kontakt</a></li>
+                <li><a href="float.html">FLOAT</a></li>
 
             </ul>
     </nav>
