--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <a href="wlasciwosci_css.html">WŁAŚCIWOŚCI CSS</a> <br/>
             <a href="bajka_krawczyk.html">BAJKA_KRAWCZYK</a> <br/>
             <a href="strona_semantyczna.html">STRONA SEMANTYCZNA</a> </b>
+            <a href="pozycjonowanie1.html">POZYCJONOWANIE1</a> </b>
+            <a href="pozycjonowanie2.html">POZYCJONOWANIE2</a> </b>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
             <a href="calosc.wav"> MUSIC </a> <br/>
