--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a href="doc/grupaii2.docx"> WORD</a> <br />
             <a href="doc/zeszyt1.xlsx"> EXCEL</a> </br>
         <h3>LINKI</h3>
-            <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="google.png"/> </a> <br/>
-            <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="strona_psi.jpg"/> </a> <br/>
+            <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="/google.png"/> </a> <br/>
+            <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="/strona_psi.jpg"/> </a> <br/>
         
 
 
