--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
             <a href="strona_semantyczna.html">STRONA SEMANTYCZNA</a> </br>
             <a href="pozycjonowanie1.html">POZYCJONOWANIE1</a> </br>
             <a href="pozycjonowanie2.html">POZYCJONOWANIE2</a> </br>
+            <a href="menu_pionowe.html">MENU PIONOWE</a> </br>
         <h3>MULTIMEDIA</h3>
             <a href="obrazy_i_multimedia">VIDEO CSS</a> <br/>
             <a href="calosc.wav"> MUSIC </a> <br/>
         <h3>DOKUMENTY</h3>
             <a href="doc/grupaii2.docx"> WORD</a> <br />
-            <a href="doc/zeszyt1.xlsx"> EXCEL</a> </br>
+            <a href="doc/zeszyt1.xlsx"> EXCEL</a>
         <h3>LINKI</h3>
             <a href="https://www.google.pl/?hl=pl"> <img height="50" wight="70" src="/google.png"/> </a> <br/>
             <a href="http://www.tsi-pai.cba.pl/"> <img height="50" wight="70" src="/strona_psi.jpg"/> </a> <br/>
